# INDE577_Kumar_DataSciMachineLearning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  pytest.yml  style.yml
notebooks/: README.md
notebooks/supervised/: README.md
notebooks/supervised/KNN/: README.md  knn_from_scratch.ipynb
notebooks/supervised/decision_trees/: README.md  decision_trees_demo.ipynb
notebooks/supervised/ensemble_methods/: README.md  ensemble_methods_demo.ipynb  heartdisease_R.csv
notebooks/supervised/knn/: README.md  knn_classifier_demo.ipynb
notebooks/supervised/linear_regression/: README.md  linear_regression_demo.ipynb
notebooks/supervised/logistic_regression/: README.md  logistic_regression_demo.ipynb
notebooks/supervised/multilayer_perceptron/: README.md  multilayer_perceptron_demo.ipynb
notebooks/supervised/perceptron/: README.md  perceptron_demo.ipynb
notebooks/supervised/regression_trees/: README.md  regression_trees_demo.ipynb
notebooks/unsupervised/: README.md
notebooks/unsupervised/community_detection/: README.md  community_detection_demo.ipynb
notebooks/unsupervised/dbscan/: README.md  dbscan_demo.ipynb
notebooks/unsupervised/kmeans/: README.md  kmeans_demo.ipynb
notebooks/unsupervised/pca/: README.md  pca_demo.ipynb
src/: README.md
src/rice2025/: README.md  __init__.py  metrics.py  postprocess.py  preprocess.py
src/rice2025.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rice2025/supervised/: knn.py  perceptron.py
src/rice2025/supervised_learning/: __init__.py  decision_tree.py  distances.py  ensemble_methods.py  knn.py  linear_regression.py  perceptron.py  (+4 more)
src/rice_ml.egg-info/: PKG-INFO  SOURCES.txt
tests/: README.md  test_basic_functions.py  test_community_detection.py  test_dbscan.py  test_decision_tree.py  test_ensemble_methods.py  test_label_propagation.py  test_linear_regression.py  test_logistic_regression.py  test_metrics.py  test_multilayer_perceptron.py  test_pca.py  test_perceptron.py  test_postprocess.py  test_preprocess.py  test_regression_tree.py  test_supervised_knn.py  test_unsupervised_kmeans.py
(+10 files in other folders)
